--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "devDependencies": {
     "karma": "^0.12.16",
+    "karma-phantomjs-launcher": "~0.1",
     "karma-chrome-launcher": "^0.1.4",
     "karma-jasmine": "^0.1.5",
     "protractor": "~1.0.0",
